--- a/lindex.html
+++ b/lindex.html
@@ -19,7 +19,9 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Enter your password..." required>
                 </div>
+                <button>Login</button>
             </form>
+            <a href="">Create an account</a>
         </div>
         <div class="register">
 
