--- a/lindex.html
+++ b/lindex.html
@@ -10,21 +10,45 @@
     <div class="container">
         <div class="login">
             <h2>LogIn</h2>
-            <form action="">
-                <div class="data1">
-                    <label for="username">Username</label>
+            <form action="/login" method="post">
+                <div class="login_user">
+                    <label for="username">Username:</label><br>
                     <input type="text" id="username" placeholder="Enter your username..." required>
                 </div>
-                <div class="data2">
-                    <label for="password">Password</label>
+                <div class="login_pass">
+                    <label for="password">Password:</label><br>
                     <input type="password" id="password" placeholder="Enter your password..." required>
                 </div>
-                <button>Login</button>
+                <input type="checkbox" name="remember">
+                <label for="remember">Remember Me</label><br>
+                <button type="submit">Login</button>
             </form>
             <a href="">Create an account</a>
         </div>
         <div class="register">
-
+            <h2>Register</h2>
+            <form action="/register" method="post">
+                <div class="register1">
+                    <label for="name">Name:</label><br>
+                    <input type="text" id="name" placeholder="Enter your full name..." required>
+                </div>
+                <div class="register2">
+                    <label for="new_username">New Username:</label><br>
+                    <input type="text" id="new_username" placeholder="Choose a new username..." required>
+                </div>
+                <div class="register3">
+                    <label for="email">Email:</label><br>
+                    <input type="email" id="email" placeholder="Enter your email address..." required>
+                </div>
+                <div class="register4">
+                    <label for="new_password">Password:</label><br>
+                    <input type="password" id="new_password" placeholder="Choose a strong password..." required>
+                </div>
+                <div class="register5">
+                    <label for="verify">Verify your Password:</label><br>
+                    <input type="password" id="verify" placeholder="Repeat the password..." required>
+                </div>
+            </form>
         </div>
     </div>
 
