added a register button and improved the look of the container

--- a/lindex.html
+++ b/lindex.html
@@ -48,6 +48,7 @@
                     <label for="verify">Verify your Password:</label><br>
                     <input type="password" id="verify" placeholder="Repeat the password..." required>
                 </div>
+                <button type="submit">Register</button>
             </form>
         </div>
     </div>
