--- a/lindex.html
+++ b/lindex.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="login">
-            <h2>LogIn</h2>
+            <h2>Login</h2>
             <form action="/login" method="post">
                 <div class="login_user">
                     <label for="username">Username:</label><br>
