improved the login and register buttons

--- a/lindex.html
+++ b/lindex.html
@@ -21,9 +21,9 @@
                 </div>
                 <input type="checkbox" name="remember">
                 <label for="remember">Remember Me</label><br>
-                <button type="submit">Login</button>
+                <button type="submit">Log in</button>
             </form>
-            <a href="">Create an account</a>
+            <p>Don't have an account <a href="" class="bold"><bold>Register</bold></a></p>
         </div>
         <div class="register">
             <h2>Register</h2>
