the labels are hidden with css and was able to make them appear with js, but it's not working correctly

--- a/lindex.html
+++ b/lindex.html
@@ -12,14 +12,14 @@
             <h2>Login</h2>
             <form action="/login" method="post">
                 <div class="login_user">
-                    <label for="username">Username:</label><br>
+                    <label for="username">Username</label><br>
                     <input type="text" id="username" placeholder="Enter your username..." required>
                 </div>
                 <div class="login_pass">
-                    <label for="password">Password:</label><br>
+                    <label for="password">Password</label><br>
                     <input type="password" id="password" placeholder="Enter your password..." required>
                 </div>
-                <input type="checkbox" name="remember">
+                <input type="checkbox" name="remember" class="remember_text">
                 <label for="remember">Remember Me</label><br>
                 <button type="submit">Log in</button>
             </form>
@@ -29,11 +29,11 @@
             <h2>Register</h2>
             <form action="/register" method="post">
                 <div class="register1">
-                    <label for="name">Name:</label><br>
+                    <label for="name">Name</label><br>
                     <input type="text" id="name" placeholder="Enter your full name..." required>
                 </div>
                 <div class="register2">
-                    <label for="new_username">New Username:</label><br>
+                    <label for="new_username">New Username</label><br>
                     <input type="text" id="new_username" placeholder="Choose a new username..." required>
                 </div>
                 <div class="register3">
@@ -41,11 +41,11 @@
                     <input type="email" id="email" placeholder="Enter your email address..." required>
                 </div>
                 <div class="register4">
-                    <label for="new_password">Password:</label><br>
+                    <label for="new_password">Password</label><br>
                     <input type="password" id="new_password" placeholder="Choose a strong password..." required>
                 </div>
                 <div class="register5">
-                    <label for="verify">Verify your Password:</label><br>
+                    <label for="verify">Verify your Password</label><br>
                     <input type="password" id="verify" placeholder="Repeat the password..." required>
                 </div>
                 <button type="submit">Register</button>
