--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
         <div class="register">
             <h2>Register</h2>
             <form action="/register" method="post">
-                <div class="register1">
+                <div class="reg_name">
                     <label for="name">Name</label><br>
                     <input type="text" id="name" placeholder="Enter your full name..." required>
                 </div>
-                <div class="register2">
+                <div class="reg_username">
                     <label for="new_username">New Username</label><br>
                     <input type="text" id="new_username" placeholder="Choose a new username..." required>
                 </div>
-                <div class="register3">
-                    <label for="email">Email:</label><br>
+                <div class="reg_email">
+                    <label for="email">Email</label><br>
                     <input type="email" id="email" placeholder="Enter your email address..." required>
                 </div>
-                <div class="register4">
+                <div class="reg_pass">
                     <label for="new_password">Password</label><br>
                     <input type="password" id="new_password" placeholder="Choose a strong password..." required>
                 </div>
-                <div class="register5">
+                <div class="reg_verify">
                     <label for="verify">Verify your Password</label><br>
                     <input type="password" id="verify" placeholder="Repeat the password..." required>
                 </div>
